{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Test",
            "id": "4395ab34-439f-4eae-b0ee-7db14e7f9d7e",
            "actions": [
                {
                    "name": "Test1",
                    "type": "Button",
                    "id": "cf010221-3685-4d70-9908-547f2e5e6b98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test2",
                    "type": "Button",
                    "id": "e88cf4f0-cefb-45fa-82c8-75cec2219bcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test3",
                    "type": "Button",
                    "id": "fd5b0a8d-fe7b-4d93-8442-2f1f591631c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test4",
                    "type": "Button",
                    "id": "496657d1-c0d2-44b3-8efa-e6e2df0a8e7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test5",
                    "type": "Button",
                    "id": "b1a28eb9-3106-4c1c-9154-282d807e678b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestClick",
                    "type": "Button",
                    "id": "dbbd7ba3-cdcf-4c17-b6bb-9f94e7bb9ddc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "9f87bf06-1640-422c-9d02-fee81fccc780",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "R_Click",
                    "type": "Button",
                    "id": "15c1b506-0d92-4371-9a36-02307d7c6c09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseWheel",
                    "type": "Value",
                    "id": "a27762b3-026a-48f9-8769-36f92e1d8280",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "acbe418c-6c4f-4d17-b22f-c1a6209d7a62",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Test1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1f26d9f-dbab-4837-840a-9a1a3c15f075",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Test2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "038bda24-8ff0-4795-9f1a-e2ed2c80867c",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Test3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "077af7d9-1d85-41e9-b2ed-82e8fa020218",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Test4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfe66ae0-3962-40b5-aea0-91c134f2dd41",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Test5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8eaabc5-7ede-4c3f-8f98-7339fb253176",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "TestClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc0db5f0-76c2-43c4-9de2-04f92eae5ee1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce13701d-1969-4d5c-9cc0-1d6b8171605b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "R_Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbc5ea53-4892-4043-b962-f7747689e393",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "MouseWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "caf343c6-4cb2-4a50-820b-71b8df677aea",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "2d2beb78-fe3c-4650-992a-0b75ea5d44dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "11efd40f-e8a1-49f9-bdc4-9199e5cad73e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseWheel",
                    "type": "Value",
                    "id": "c17bfbfd-c98e-4bd3-9747-e943a0268170",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "46cc0100-48bd-40bf-a1ff-60dda73278bb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1a321ae-0d31-4e80-b083-55ddc620f08c",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "910e2b84-0504-4f71-8d4f-9f8e0cea068e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KM",
            "bindingGroup": "KM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}